# ai-dnd

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  run.sh
.claude/: launch.json
data/: worlds.db
datasets/freeform/: SCHEMA.md  arbiter.jsonl  build.py  consequence.jsonl  examples.py  freeform.jsonl  router.jsonl
datasets/location/: build.py  examples.py  location.jsonl
datasets/narrator/: SCHEMA.md  build.py  examples.py  narrator.jsonl
datasets/persona/: build.py  persona.jsonl
datasets/quests/: SCHEMA.md  build.py  examples.py  quests.jsonl
docs/: agents.md  architecture.md  development.md  gameplay.md  index.md  maps.md  models.md  running.md
hf/: README_location.md
scripts/: archetypes.py  bench.py  bench_archetypes.py  brain_scenarios.py  citysim_viz.py  deploy.sh  dialogue_sim.py  enrich_bestiary.py  fetch_srd.py  gen_battlemaps.py  gen_dungeon_anim.py  gen_map_collages.py  gen_materials.py  home_serve.sh  local.env  mind_plan_demo.py  mind_sim.py  mind_sim_hybrid.py  mind_sim_llm.py  minitown.py  peoplegen.py  play_world.py  playtest_assassin.py  playtest_diag.py  playtest_diag2.py  playtest_night.py  playtest_tavern.py  pool_scene.py  portrait_proto.py  run_local.sh  serve_public.sh  setup_local.sh  tavern.py  vps_provision.sh  worldgen.py
src/aidnd/: __init__.py  __main__.py  bootstrap.py  config.py  ids.py
src/aidnd/citygraph/: __init__.py  generate.py  graph.py  model.py  params.py
src/aidnd/cognition/: __init__.py  cognition.py  memory.py  relationships.py
src/aidnd/combat/: __init__.py  engine.py  grid.py  spells.py  state.py  surfaces.py  tactician.py
src/aidnd/content/: __init__.py  acquaintance.py  agency.py  agent.py  board.py  cases.py  citypop.py  citysim.py  commerce.py  dialogue_fsm.py  dungeons.py  economy.py  event_pool.py  facts.py  guild.py  knowledge.py  lmop_quests.py  lore_ref.py  maps.py  newgame.py  patchnotes.py  phandalin.py  region.py  srd_data.py  srd_pack.py  watch.py
tests/: conftest.py  test_board.py  test_combat_quest.py  test_conversations.py  test_dialogue.py  test_dice_rules.py  test_discovery.py  test_dungeon.py  test_environment.py  test_factions.py  test_fake_model.py  test_inventory_plausibility.py  test_inventory_ui.py  test_item_alterations.py  test_judge_scenes.py  test_knowledge.py  test_leveling.py  test_mapinfo.py  test_memory_facts.py  test_model_roles.py  test_navigation.py  test_npc_scenarios.py  test_pacing.py  test_replay.py  test_saves.py  test_trade_items.py  test_weather.py  test_world_generation.py
tests/citygraph/: test_citygraph.py
tests/mind/: test_agenda.py  test_brain.py  test_emergent.py  test_mind.py  test_social.py  test_trade.py
tests/worldgen/: test_worldgen.py
training/: .gitignore  README.md  _compare3.py  config.env  eval_arbiter.py  eval_compare.py  eval_consequence.py  eval_hf.py  eval_narrator.py  eval_ood.py  eval_router.py  export_merged.sh  export_ollama.sh  merge_lora.py  monitor.sh  pipeline.sh  playtest.py  prepare.py  requirements.txt  run_remote.sh  train_lora.py  watch.sh
training/hf/: README.md  README_arbiter.md  README_narrator.md  README_router.md  upload.sh
training/reports/: quest_compare.md
(+132 files in other folders)
