[project]
name = "aidnd"
version = "0.1.0"
description = "AI-DnD Engine — text-tactical D&D 5e with a persistent simulated world, LOD NPC simulation and local LLM agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    # сервис: пользователи/сессии/игры в Postgres + auth (email-пароль + Google OAuth)
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "argon2-cffi>=23.0",
    "authlib>=1.3",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
maps = ["Pillow>=10.0"]   # only for regenerating battle maps via scripts/gen_battlemaps.py

# Managed with uv: `uv sync` installs runtime + the dev group below.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",        # lint + format (code quality)
    "zensical",         # documentation site generator (docs/)
]

[project.scripts]
aidnd = "aidnd.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyflakes(F) + isort(I) + pyupgrade(UP) + bugbear(B) + warnings(W); the dense
# one-statement-per-line style is intentional, so pycodestyle E-style nags are off.
select = ["F", "I", "UP", "B", "W"]
ignore = ["B905"]       # zip(strict=) — not required here

[tool.ruff.lint.per-file-ignores]
# package __init__.py files are re-export surfaces; do NOT strip "unused" imports
"**/__init__.py" = ["F401"]
